--- a/festival/Client/Pages/FrivilligePage.razor
+++ b/festival/Client/Pages/FrivilligePage.razor
@@ -74,6 +74,7 @@
             <button class="btn btn-primary" @onclick="AddFrivilligItemHandler">Opret frivillig</button>
         </div>
 
+        <label for="UpdateFrivilligHandler">Indtast et ID på personen du vil opdatere på, derefter udfyld forms</label>
         <div class="col-sm-12">
             <button class="btn btn-primary" @onclick="UpdateFrivilligHandler">Opdater frivillig</button>
         </div>
@@ -83,9 +84,11 @@
             <button class="btn btn-primary" @onclick="DeleteFrivilligHandler">Delete frivillig</button>
         </div>
 
+        <!-----Koden virker ikke? Skal vi fikse eller slette-->
+        <h2>Booking: return code: @ErrorCode</h2>
+
     </form>
 
-    <h2>Booking: return code: @ErrorCode</h2>
 
 
 </EditForm>
@@ -109,6 +112,7 @@
     //Tilføjer vores nye indtastet data til frivilligapi
     private async void AddFrivilligItemHandler()
     {
+        Console.WriteLine("Adding");
         Frivillige item = new Frivillige(frivilligid: Frivilligid, fornavn: Fornavn, efternavn: Efternavn, alder: Alder, email: Email, tlf: Tlf, adresse: Adresse, samletantalpoint: Samletantalpoint);
         ErrorCode = await FrivilligeService.AddFrivillige(item);
         Console.WriteLine(ErrorCode);
