--- a/festival/Client/Pages/FrivilligeListe.razor
+++ b/festival/Client/Pages/FrivilligeListe.razor
@@ -67,7 +67,7 @@ else //Oprettelse af table
 
     <!----Felt for frivillig id, sådan at vi kan slette--->
     <div class="col-sm-2">
-        <label for="Frivilligid">Frivilligid</label>
+        <label for="Frivilligid">Frivillig ID</label>
         <InputNumber id="Frivilligid" @bind-Value="Frivilligid" class="form-control"
                      ParsingErrorMessage=" The {0} field has an invalid value."
                      DisplayName="Frivilligid" />
