--- a/festival/Client/Pages/FrivilligePage.razor
+++ b/festival/Client/Pages/FrivilligePage.razor
@@ -63,7 +63,7 @@
         </div>
 
         <div class="col-sm-2">
-            <label for="Frivilligid">Frivilligid</label>
+            <label for="Frivilligid">Frivillig ID</label>
             <InputNumber id="Frivilligid" @bind-Value="Frivilligid" class="form-control"
                          ParsingErrorMessage=" The {0} field has an invalid value."
                          DisplayName="Frivilligid" />
