--- a/festival/Client/Pages/KoordinatorPage.razor
+++ b/festival/Client/Pages/KoordinatorPage.razor
@@ -99,7 +99,7 @@
           class="row p-3">
 
 
-    <!---Arbejdsplads-->
+    <!---Arbejdsplads--->
     <div class="col-md-4 mb-3">
         <div class="form-check">
             <label for="vagter">Vælg Arbejdsplads</label>
@@ -126,7 +126,6 @@
                      DisplayName="Vagtid" />
         <ValidationMessage For="@(() => Vagtid)" />
     </div>
-
 
     <!----Dato for vagt-->
     <div class="col-md-4 mb-3">
